--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,6 +58,11 @@ select:focus[data-flux-control] {
     @apply outline-hidden ring-2 ring-accent ring-offset-2 ring-offset-accent-foreground;
 }
 
+/* Hide scrollbar for mobile navigation */
+nav::-webkit-scrollbar {
+    display: none;
+}
+
 /* \[:where(&)\]:size-4 {
     @apply size-4;
 } */
